# bristly_billy_beane

./: .env.example  .gitignore  CLAUDE.md  OPTION_A_DOD.md  README.md  pyproject.toml
config/: archetype_signatures.yaml  auto_include_cards.yaml  functional_categories.yaml  game_changers.yaml  karsten_mana_base.yaml  role_tag_overrides.yaml  set_mechanics_articles.yaml  settings.yaml  strategic_articles.yaml  synergy_rules.yaml
launchd/: com.sabermetrics.monthly.plist  com.sabermetrics.nightly.plist  com.sabermetrics.quarterly.plist  com.sabermetrics.weekly.plist
project_plan/: SKILLS.md  api_contracts.md  build_plan.md  design.md  prompts.md  refactor_plan.md  sabermetrics_v2_spec 2.md  schema.md
scripts/: build_deckbuilding_kb.py  calibrate_scoring.py  create_candidate_view.py  diagnose_lands.py  diagnose_overflow 2.py  index_references.py  index_set_mechanics.py  initial_ingestion.py  install_launchd.sh  monthly_rulings_refresh.py  nightly_refresh.py  prune_orphan_profiles.py  quarterly_set_refresh.py  setup_db.py  validate_overflow_fix 2.py  weekly_refresh.py
tests/: _oracle_harness.py  conftest.py  oracle_corpus.py  test_analytics.py  test_anti_synergy.py  test_archetype_signatures.py  test_automation.py  test_build7_regressions.py  test_calibration.py  test_candidate_view.py  test_category_coverage.py  test_cluster_validation.py  test_cluster_valuation.py  test_combat_gated.py  test_commander_exclusion.py  test_config.py  test_cwe_scoring.py  test_db.py  test_deck_clustering.py  test_deck_legality.py  test_deck_patterns.py  test_detector_snapshots.py  (+37 more)
(+106 files in other folders)
